force-app/main/default/objects/Ingredient_Inventory__c/Ingredient_Inventory__c.object-meta.xml
<CustomObject>
    <label>Ingredient Inventory</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Inventory No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ingredient Inventories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>