force-app/main/default/objects/Ingredient_Inventory__c/fields/Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Ingredient__c</fullName>
    <label>Ingredient</label>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>