force-app/main/default/objects/Ingredient_Inventory__c/fields/Quantity_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Reserved__c</fullName>
    <label>Quantity Reserved</label>
    <summarizedField>Inventory_Reservation__c.Quantity__c</summarizedField>
    <summaryForeignKey>Inventory_Reservation__c.Ingredient_Inventory__c</summaryForeignKey>
    <summaryFilterItems>
        <field>Inventory_Reservation__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>